adding upload button, changes to css to match UI

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <!-- OVERLAY -->
 <div id="attendee-drawing-overlay" class="overlay">
     <a href="javascript:void(0)" class="closebtn" style="z-index: 1000" onclick="closeAttendeeDrawing()">&times;</a>
-
+	<i class="fa fa-upload uploadbtn" onclick="uploadCSV()" aria-hidden="false"></i>
     <div class="overlay-content container" style="margin-top: 15%;">
         <div class="col-md-12 col-lg-8 col-lg-offset-2" id="carousel-wrapper">
             <div id="carousel">
@@ -156,6 +156,7 @@
             <button id="start-stop-button" class="start-stop-button">
                 SPIN
             </button>
+            <br>
         </div>
     </div>
 </div>
@@ -191,6 +192,8 @@
 <script src="vendor/countUp.js"></script>
 <!-- Slot Machine for Attendee Drawing -->
 <script src="vendor/presentation/jquery.slotmachine.min.js"></script>
+<!-- Velocity -->
+<script src="vendor/velocity.min.js"></script>
 <!-- Presentation Custom -->
 <script src="js/live-demo.js"></script>
 </body>
