--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
     </div>
 </header>
-
+<div id="container1"></div>
 <!-- OVERLAY -->
 <div id="attendee-drawing-overlay" class="overlay">
     <a href="javascript:void(0)" class="closebtn" style="z-index: 1000" onclick="closeAttendeeDrawing()">&times;</a>
@@ -199,6 +199,8 @@
 <script src="js/live-demo.js"></script>
 <!-- Presentation Custom -->
 <script src="js/upload.js"></script>
+<!-- Presentation Custom -->
+<script src="js/myAnim.js"></script>
 </body>
 
 </html>
