Fixed positioning on blocks

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Velocity.js: Demo</title>
+	<title>TEST ANIM</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, minimal-ui">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<style>
@@ -94,27 +94,26 @@
 			width: 200px;
 			height: 80px;
 			text-align: center;
-			vertical-align: middle;
 			background-color: #4bc2f1;
+		}
+		.dotInfo {
+			font-size: 12px;
+			position: relative;
+			top: 15%;
+			transform: translateY(-15%); 
 		}
 		
 		.dotName {
-  			display: inline-block;
-  			vertical-align: middle;
- 			line-height: normal;
+  			position: relative;
+			top: 15%;
+			transform: translateY(-15%); 
 		}
 	</style>
 </head>
 <body>
 	<div id="welcome">
 		<p id="browserWidthNotice">
-			Make your browser wider.
-		</p>
-		<p>
-			No WebGL. No Canvas. Just pure DOM.
-		</p>
-		<p>
-			<span id="count">175</span> divs with border-radius and box-shadow.
+			Welcome to XYZ Conference
 		</p>
 	</div>
 	<a id="logo" href="index.html">Velocity<span id="logoDot">.</span>js</a>
