attempting a spin esque function

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <!-- OVERLAY -->
 <div id="attendee-drawing-overlay" class="overlay">
     <a href="javascript:void(0)" class="closebtn" style="z-index: 1000" onclick="closeAttendeeDrawing()">&times;</a>
-	<i class="fa fa-upload uploadbtn" aria-hidden="true"></i>
+	<i class="fa fa-upload uploadbtn" data-toggle="tooltip" title="Upload" aria-hidden="true"></i>
 	<input id="upload-input" type="file" accept=".csv" name="uploads[]" multiple="multiple">
     <div class="overlay-content container" style="margin-top: 15%;">
         <div class="col-md-12 col-lg-8 col-lg-offset-2" id="carousel-wrapper">
