--- a/test.html
+++ b/test.html
@@ -111,6 +111,7 @@
 	</style>
 </head>
 <body>
+	<button onclick="getPos()">pos</button>
 	<div id="welcome">
 		<p id="browserWidthNotice">
 			Welcome to XYZ Conference
