Functionality to line up div's

--- a/test.html
+++ b/test.html
@@ -111,13 +111,7 @@
 	</style>
 </head>
 <body>
-	<button onclick="getPos()">pos</button>
-	<div id="welcome">
-		<p id="browserWidthNotice">
-			Welcome to XYZ Conference
-		</p>
-	</div>
-	<a id="logo" href="index.html">Velocity<span id="logoDot">.</span>js</a>
+	<!--   a id="logo" href="index.html">Velocity<span id="logoDot">.</span>js</a -->
 	<div id="container"></div>
 	<!-- jQuery -->
 	<script src="vendor/presentation/jquery.js"></script>
