making the spin function, starting to chain animations together

--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
         </div>
     </div>
 </header>
-<div id="container1"></div>
 <!-- OVERLAY -->
 <div id="attendee-drawing-overlay" class="overlay">
     <a href="javascript:void(0)" class="closebtn" style="z-index: 1000" onclick="closeAttendeeDrawing()">&times;</a>
@@ -161,6 +160,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- END HEADER -->
@@ -200,7 +200,7 @@
 <!-- Presentation Custom -->
 <script src="js/upload.js"></script>
 <!-- Presentation Custom -->
-<script src="js/myAnim.js"></script>
+<script src="js/dots.js"></script>
 </body>
 
 </html>
