--- a/test.html
+++ b/test.html
@@ -5,114 +5,13 @@
 	<title>TEST ANIM</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, minimal-ui">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-	<style>
-		* {
-			padding: 0;
-			margin: 0;
-			pointer-events: none;
-		}
-
-		body {
-			background: #060b14;
-			overflow: hidden;
-
-			font-family: "Helvetica Neue", "Open Sans";
-			font-weight: 100;
-		}
-
-		a {
-			color: #4bc2f1;
-			text-decoration: none;
-		}
-
-		a:hover {
-			text-decoration: underline;
-		}
-
-		#container {
-			perspective: 50px;
-			-webkit-perspective: 50px;
-			-moz-perspective: 50px;
-			-ms-perspective: 50px;
-
-			transform-origin: 50% 100%;
-			-webkit-transform-origin: 50% 100%;
-			-moz-transform-origin: 50% 100%;
-			-ms-transform-origin: 50% 100%;
-
-			opacity: 0.55;
-		}
-
-		#welcome {
-			position: fixed;
-			width: 22rem;
-			left: 50%;
-			top: 45%;
-			margin-top: -1rem;
-			margin-left: -11rem;
-			
-			font-weight: 200;
-			color: #fff;
-			opacity: 0.65;
-			text-align: center;
-			font-size: 0.775rem;
-			line-height: 1.05rem;
-			letter-spacing: 0.135em;
-			word-spacing: -0.075rem;
-		}
-
-		@media screen and (max-width: 400px) {
-			#welcome {
-				font-size: 0.45rem !important;
-			}
-		}
-
-		#browserWidthNotice {
-			font-style: italic;
-			display: none;
-		}
-
-		#logo {
-			position: fixed;
-			right: 0.75rem;
-			bottom: 0.65rem;
-
-			cursor: pointer;
-
-			text-decoration: none;
-			color: #d6d6d6;
-			font-size: 2rem;
-			letter-spacing: 0.025em;
-		}
-
-		#logoDot {
-			color: #d74580;
-		}
-
-		.dot {
-			position: fixed;
-			width: 200px;
-			height: 80px;
-			text-align: center;
-			background-color: #4bc2f1;
-		}
-		.dotInfo {
-			font-size: 12px;
-			position: relative;
-			top: 15%;
-			transform: translateY(-15%); 
-		}
-		
-		.dotName {
-  			position: relative;
-			top: 15%;
-			transform: translateY(-15%); 
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/presentation/dots.css">
 </head>
+
 <body>
 	<!--   a id="logo" href="index.html">Velocity<span id="logoDot">.</span>js</a -->
 	<div id="container"></div>
+	<button id="box" onclick="tryThis()" >zzz</button>
 	<!-- jQuery -->
 	<script src="vendor/presentation/jquery.js"></script>
 	<script src="vendor/velocity.min.js" id="library"></script>
