--- a/test.html
+++ b/test.html
@@ -5,13 +5,15 @@
 	<title>TEST ANIM</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, minimal-ui">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+	    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/presentation/dots.css">
 </head>
 
 <body>
 	<!--   a id="logo" href="index.html">Velocity<span id="logoDot">.</span>js</a -->
 	<div id="container"></div>
-	<button id="box" onclick="tryThis()" >zzz</button>
+	<i class="fa fa-random fa-4" id="box" aria-hidden="true"></i>
 	<!-- jQuery -->
 	<script src="vendor/presentation/jquery.js"></script>
 	<script src="vendor/velocity.min.js" id="library"></script>
